<resources>
  <string formatted="false" name="app_full_name">BatteryBot Pro</string>
  <string formatted="false" name="app_launcher_name">BatteryBot</string>
  <string formatted="false" name="settings_activity_subtitle">Settings</string>
  <string formatted="false" name="help_activity_subtitle">BatteryBot Help</string>
  <string formatted="false" name="log_view_activity_subtitle">Logs</string>
  <string formatted="false" name="app_full_name_free">BatteryBot</string>
  <string formatted="false" name="battery_use_b">View Battery Use</string>
  <string formatted="false" name="upgrade_donate_b">Upgrade/Donate...</string>
  <string formatted="false" name="circle_widget">BatteryBot Circle</string>
  <string formatted="false" name="full_widget">BatteryBot Full</string>
  <string formatted="false" name="confirm_disable_hint">
    Hint: Disable this confirmation dialog in the settings...
  </string>
  <string formatted="false" name="yes">Yes</string>
  <string formatted="false" name="cancel">Cancel</string>
  <string formatted="false" name="confirm_close">Really Close?</string>
  <string formatted="false" name="confirm_close_hint">
    BatteryBot will be completely closed, and you won\'t see it
    in your status bar anymore.  Any desktop widgets will be useless.\n

    \nIf you just want to leave the main window and keep the service
    running, press Cancel and then just press your device\'s BACK
    button to leave the main window.\n

    \nIf you want to hide the notification but keep widgets running,
    press Cancel and then change the settings to hide the notification.
  </string>
  <string formatted="false" name="notifications_disabled">Notifications are disabled!</string>
  <string formatted="false" name="notifications_disabled_message">
    You have blocked all notifications for BatteryBot.  This will
    prevent BatteryBot from showing any notifications: the main
    notification and any alarms you have set will all be blocked.\n

    \nSince BatteryBot allows you to turn the main notification on or off
    separately, as well as temporarily disable any alarms
    you\'ve created, it is stongly recommended that you unblock the
    BatteryBot notifications.  While they are blocked, it will appear
    that BatteryBot is broken.\n

    \nPlease press OK to be taken to the system settings where you can
    unblock notifications for BatteryBot.
  </string>
  <string formatted="false" name="battery_optimized">BatteryBot restricted!</string>
  <string formatted="false" name="battery_optimized_message">
    BatteryBot is restricted from running correctly.  This \"battery optimization\"
    is an Android feature designed to restrict poorly designed apps to prevent them
    from using too much battery in the background.\n

    \nBatteryBot, however, is a well-designed app that must run unrestricted in
    the background in order to function properly.  It is extremely efficient and
    will not reduce your battery life.\n

    \nPlease press OK to be taken to the system settings where you can
    disable battery optimization for BatteryBot.
  </string>
  <string formatted="false" name="main_notif_chan_name">Main Notification</string>
  <string formatted="false" name="channel_group_name_alarms">Alarms</string>
  <string formatted="false" name="confirm_clear_logs">Really clear all logs?</string>
  <string formatted="false" name="configure_log_filter">Show which log items?</string>
  <string formatted="false" name="okay">Okay</string>
  <string formatted="false" name="none">None</string>
  <string formatted="false" name="tab_current_info">Current Info</string>
  <string formatted="false" name="tab_history">History</string>
  <string formatted="false" name="notification_until_charged">" until charged"</string>
  <string formatted="false" name="notification_until_drained">" left"</string>
  <string formatted="false" name="activity_until_charged">until charged</string>
  <string formatted="false" name="activity_until_drained">until drained</string>
  <string formatted="false" name="menu_settings">Settings</string>
  <string formatted="false" name="menu_close">Close</string>
  <string formatted="false" name="menu_help">Help</string>
  <string formatted="false" name="menu_rate_and_review">Rate &amp; Review</string>
  <string formatted="false" name="menu_clear">Clear</string>
  <string formatted="false" name="menu_reverse">Reverse Order</string>
  <string formatted="false" name="menu_log_filter">Filter</string>
  <string formatted="false" name="menu_export">Export CSV</string>
  <string formatted="false" name="menu_delete_alarm">Delete Alarm</string>
  <string formatted="false" name="menu_show_seconds">Show Seconds</string>
  <string formatted="false" name="menu_hide_seconds">Hide Seconds</string>
  <string formatted="false" name="percent_symbol">%</string>
  <string formatted="false" name="degree_symbol">°</string>
  <string formatted="false" name="fahrenheit">Fahrenheit</string>
  <string formatted="false" name="fahrenheit_symbol">F</string>
  <string formatted="false" name="celsius">Celsius</string>
  <string formatted="false" name="celsius_symbol">C</string>
  <string formatted="false" name="volt_symbol">V</string>
  <string formatted="false" name="fully_charged_in">Fully Charged in:</string>
  <string formatted="false" name="light_usage">Light Usage Left:</string>
  <string formatted="false" name="normal_usage">Normal Usage Left:</string>
  <string formatted="false" name="heavy_usage">Heavy Usage Left:</string>
  <string formatted="false" name="constant_usage">Constant Usage Left:</string>
  <string formatted="false" name="press_back_to_leave">Press BACK to leave.</string>
  <string formatted="false" name="press_menu_for_more">Press MENU for more items.</string>
  <string formatted="false" name="inaccessible_storage">SD Card is inaccessible.</string>
  <string formatted="false" name="inaccessible_w_reason">SD Card inaccessible: </string>
  <string formatted="false" name="read_only_storage">SD Card is read only.</string>
  <string formatted="false" name="no_storage_permission">Storage permission not granted.</string>
  <string formatted="false" name="file_written">File successfully written to selected location.</string>
  <string formatted="false" name="date">date</string>
  <string formatted="false" name="time">time</string>
  <string formatted="false" name="status">status</string>
  <string formatted="false" name="charge">charge_percentage</string>
  <string formatted="false" name="temperature">degrees_celsius</string>
  <string formatted="false" name="temperature_f">degrees_fahrenheit</string>
  <string formatted="false" name="voltage">volts</string>
  <string formatted="false" name="current">milliamperes</string>
  <string formatted="false" name="status_unplugged">Unplugged</string>
  <string formatted="false" name="alarm_chan_disabled">You have disabled notifications for this alarm type.  Please enable them to use this type of alarm.</string>
  <string formatted="false" name="pref_cat_channel_settings">Notification Channel Settings</string>
  <string formatted="false" name="pref_cat_status_bar_chip">Status Bar Chip (Android 16+)</string>
  <string formatted="false" name="pref_chip_content">Chip Content</string>
  <string formatted="false" name="pref_chip_content_help">
    Choose what value to show in the Android 16+ promoted-notification chip.
  </string>
  <string formatted="false" name="pref_chip_indicate_charging">Show Charging Emoji</string>
  <string formatted="false" name="pref_chip_indicate_charging_help">
    If enabled, the status bar chip will show a lightning emoji next to
    the chip value while charging or when fully charged.
  </string>
  <string formatted="false" name="pref_cat_icon_set">Icon Set</string>
  <string formatted="false" name="pref_icon_content">Icon Content</string>
  <string formatted="false" name="pref_cat_current_hack_main">Main Control</string>
  <string formatted="false" name="pref_cat_current_hack_unsupported">Current (mA) Hack Unsupported</string>
  <string formatted="false" name="pref_current_hack_unsupported">Sorry, the current (mA) hack is not supported on this device.</string>
  <string formatted="false" name="pref_enable_current_hack">Enable hack</string>
  <string formatted="false" name="pref_enable_current_hack_summary">
    Attempt to enable the current (mA) hack?
  </string>
  <string formatted="false" name="pref_current_hack_prefer_fs">Prefer old hack method</string>
  <string formatted="false" name="pref_current_hack_prefer_fs_summary">
    Prefer older, filesystem-based hack method?
  </string>
  <string formatted="false" name="pref_current_hack_multiplier">Multiplier</string>
  <string formatted="false" name="pref_cat_current_hack_notification">Notification</string>
  <string formatted="false" name="pref_display_current_in_vital_stats">Display in vital stats</string>
  <string formatted="false" name="pref_display_current_in_vital_stats_summary">
    Display current (mA) in main notification vital stats?
  </string>
  <string formatted="false" name="pref_cat_current_hack_main_window">Main Window</string>
  <string formatted="false" name="pref_display_current_in_main_window">Display in main window</string>
  <string formatted="false" name="pref_display_current_in_main_window_summary">
    Display current (mA) in main window?
  </string>
  <string formatted="false" name="pref_prefer_current_avg_in_vital_stats">Prefer average in vital stats</string>
  <string formatted="false" name="pref_prefer_current_avg_in_vital_stats_summary">
    Try to use current_avg in main notification vital stats?
  </string>
  <string formatted="false" name="pref_prefer_current_avg_in_main_window">Prefer average in main window</string>
  <string formatted="false" name="pref_prefer_current_avg_in_main_window_summary">
    Try to use current_avg in main window?
  </string>
  <string formatted="false" name="pref_auto_refresh_current_in_main_window">Auto-refresh mA in main window</string>
  <string formatted="false" name="pref_auto_refresh_current_in_main_window_summary">
    Auto-refresh mA every two seconds?
  </string>
  <string formatted="false" name="pref_cat_charging_indicator">Charging Indicator</string>
  <string formatted="false" name="pref_indicate_charging">Indicate Charging</string>
  <string formatted="false" name="pref_indicate_charging_summary">Alter icon to indicate when charging?</string>
  <string formatted="false" name="pref_cat_logging">Logging</string>
  <string formatted="false" name="pref_enable_logging">Enable Logging</string>
  <string formatted="false" name="pref_enable_logging_summary">Log battery state changes?</string>
  <string formatted="false" name="pref_max_log_age">Maximum Log Age</string>
  <string formatted="false" name="pref_max_log_age_summary">Delete logs older than:</string>
  <string formatted="false" name="pref_cat_temperature_unit">Temperature Unit</string>
  <string formatted="false" name="pref_convert_to_fahrenheit">Convert to Fahrenheit</string>
  <string formatted="false" name="pref_cat_autostart">Autostart</string>
  <string formatted="false" name="pref_autostart_at_boot">Autostart at Boot</string>
  <string formatted="false" name="pref_autostart_at_boot_summary">Start BatteryBot when device boots:</string>
  <string formatted="false" name="pref_cat_predictor">Time-Remaining Estimates</string>
  <string formatted="false" name="pref_prediction_type">Estimate Type</string>
  <string formatted="false" name="pref_alarm_enabled">Enable Alarm</string>
  <string formatted="false" name="pref_cat_alarm_conditions">Alarm Conditions</string>
  <string formatted="false" name="pref_alarm_type">Alarm Type</string>
  <string formatted="false" name="pref_alarm_type_summary">Trigger alarm when battery:</string>
  <string formatted="false" name="pref_alarm_threshold">Threshold</string>
  <string formatted="false" name="pref_alarm_threshold_summary">Alarm threshold:</string>
</resources>